# scribble

c++/: CMakeLists.txt  benchmark.cpp  bitwise.cpp  boost_coroutine2.cpp  cerrno.cpp  cstdarg.cpp  genetic.cpp  move.cpp  move_if_noexcept.cpp  numeric_limits.cpp  omp.cpp  os.cpp  trivial.cpp
cxx/: .gitignore  CMakeLists.txt  algorithm.cpp  benchmark.cpp  binomial.cpp  bitwise.cpp  boost_graph.cpp  cerrno.cpp  clipp.cpp  concurrent.cpp  demangle.cpp  format.cpp  genetic.cpp  hashmap.cpp  igraph.cpp  macro.cpp  mixin.cpp  move.cpp  move_if_noexcept.cpp  numeric_limits.cpp  os.cpp  sizeof.cpp  stream.cpp  toml.cpp  trivial.cpp  union.cpp
cxx/binomial/: .gitignore  README.md  binomial.cpp
cxx/boost/: boost_math.cpp
cxx/shared-library/: Makefile  main.cpp  test.cpp  test.hpp
go/: .gitignore
go/emojify/: main.go
go/msprint/: main.go
julia/: msprint.jl
pbs/: array.py  envvars.R  envvars.sh  qsub.R  qsub.py  tumopp-fst-size.R  tumopp-fst.R
python/: ansi_escape.py  arg2json.py  async.py  axisgrid.py  boostpo.py  confu.py  deletelocalsnapshots.py  figax.py  gmusic.py  ics.py  iris.py  itunes-rmdup.py  lastparse.py  ms.py  msplot.py  pipeline.py  run_tumopp.py  sk-allel.py  tile_images.py  version.py
python/linter/: B006-mutable_args.py
qsub/pbs/: array.R  array.py  array.sh  envvars.sh  qsub.py  sleep.R  sleep.sh
qsub/sge/: array-rscript.sh  envvars.R  envvars.sh  rscript.sh
qsub/slurm/: dfam-gunzip.sh  dfam-update.sh  dfam.sh  hello.sh  params.sh
qsub/uge/: array-rscript.sh  envvars.R  envvars.sh  rscript.sh  source.R
rstats/: .gitignore  bayes.R  bicycle.R  bioclinica.R  cmdstan.R  concurrent.R  convolution.R  cpp11.R  datasets.R  displays.R  distance.R  distributions.R  elongation.R  embed.c  environment.Rmd  geom_auc.R  ggproto.R  grid.R  igraph.R  layers.R  lecture-coalescent.R  logo.R  object-oriented.R  palette.R  parallel.R  pca.R  plot_phylo.R  plotly.Rmd  radius.R  rmd-gfm.Rmd  rmd-html.Rmd  sf.R  tekkamaki.R  tibble.R  tree.Rmd  tumopp-biopsy-LPk.R  tumopp-biopsy-dm.R  tumopp-nagoya.R  tumopp-treatment.R  tumor.R  (+1 more)
rstats/benchmark/: altrep.R  altrep.cpp  elongation.R  is_null.R  nth.R  random.R  tibble.R
rstats/knitr/: Makefile  autodep.qmd
rstats/visualize/: bicycle.R  bmi.R  distribution.R  layers.R  logo.R  p-adjust.R  palette.R  r-graphics.dot  running.R  screen.R  sf.R  wallpaper.R  wordcloud.R
ruby/: .rubocop.yml  array.rb  pathname.rb
rust/weathernews/: Cargo.toml
rust/weathernews/src/: channel.rs  main.rs
sh/: abspath.sh  array.sh  if-then.sh  looping.sh  param-expansion.sh  pbs-array.sh  sokendai.sh
stan/: poisson.stan
