[package]
name = "weathernews"
version = "0.1.0"
authors = ["Watal M. Iwasaki <heavywatal@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.1", features = ["blocking"] }
scraper = { version = "0.12.0" }
